--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,35 @@
-name: Code checks
+name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [main]
   pull_request:
-    branches: [ master ]
+    branches: [main]
+  workflow_dispatch:
 
-    jobs:
-      build:
-        runs-on: ubuntu-latest
-        strategy:
-          matrix:
-            python-version: [3.8, 3.9, 3.10, 3.11, 3.12]
-        steps:
-          - uses: actions/checkout@v2
-          - name: Install python ${{ matrix.python-version }}
-            uses: actions/setup-python@v2
-            with:
-              python-version: ${{ matrix.python-version }}
-          - name: Install deps
-            run:
-              python -m pip install --upgrade pip
-              pip install r requirements.txt
-          - name: Run flake8
-            run: flake8 .
-          - name: Run mypy
-            run: mypy .
+jobs:
+  tests:
+    name: tox on ${{ matrix.python-version }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.6", "3.7", "3.8", "pypy3"]
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -VV
+          python -m site
+          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install --upgrade coverage[toml] tox tox-gh-actions          
+
+      - name: Run tox targets for ${{ matrix.python-version }}
+        run: python -m tox
+      - name: Run flake8
+        run: flake8 .
+      - name: Run mypy
+        run: mypy .
