--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,170 @@
-name: CI
+name: Validate PyPy e2e
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+    paths-ignore:
+      - '**.md'
   pull_request:
-    branches: [main]
-  workflow_dispatch:
+    paths-ignore:
+      - '**.md'
+  schedule:
+    - cron: 30 3 * * *
 
 jobs:
-  tests:
-    name: tox on ${{ matrix.python-version }}
-    runs-on: ubuntu-latest
+  setup-pypy:
+    name: Setup PyPy ${{ matrix.pypy }} ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        python-version: [3.8, 3.9, 3.10, 3.11, 3.12, "pypy3"]
+        os: [macos-latest, windows-latest, ubuntu-20.04, ubuntu-latest]
+        pypy:
+          - 'pypy-2.7'
+          - 'pypy-3.7'
+          - 'pypy3.9'
+          - 'pypy-2.7-v7.3.4'
+          - 'pypy-3.7-v7.3.5'
+          - 'pypy-3.7-v7.3.4'
+          - 'pypy-3.7-v7.3.x'
+          - 'pypy-3.7-v7.x'
+          - 'pypy-2.7-v7.3.4rc1'
+          - 'pypy-3.7-nightly'
+          - 'pypy3.8-v7.3.7'
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -VV
-          python -m site
-          python -m pip install --upgrade pip setuptools wheel
-          python -m pip install --upgrade coverage[toml] tox tox-gh-actions          
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Run tox targets for ${{ matrix.python-version }}
-        run: python -m tox
+      - name: setup-python ${{ matrix.pypy }}
+        id: setup-python
+        uses: ./
+        with:
+          python-version: ${{ matrix.pypy }}
+
+      - name: Check python-path
+        run: ./__tests__/check-python-path.sh '${{ steps.setup-python.outputs.python-path }}'
+        shell: bash
+
+      - name: PyPy and Python version
+        run: python --version
+
+      - name: Run simple code
+        run: python -c 'import math; print(math.factorial(5))'
+
+      - name: Assert PyPy is running
+        run: |
+          import platform
+          assert platform.python_implementation().lower() == "pypy"
+        shell: python
+
+      - name: Assert expected binaries (or symlinks) are present
+        run: |
+          EXECUTABLE=${{ matrix.pypy }}
+          EXECUTABLE=${EXECUTABLE/pypy-/pypy}  # remove the first '-' in "pypy-X.Y" -> "pypyX.Y" to match executable name
+          EXECUTABLE=${EXECUTABLE%%-*}  # remove any -* suffixe
+          ${EXECUTABLE} --version
+        shell: bash
+
+  setup-pypy-noenv:
+    name: Setup PyPy ${{ matrix.pypy }} ${{ matrix.os }} (noenv)
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-latest, windows-latest, ubuntu-20.04, ubuntu-latest]
+        pypy: ['pypy2.7', 'pypy3.7', 'pypy3.8', 'pypy3.9-nightly']
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: setup-python ${{ matrix.pypy }}
+        id: setup-python
+        uses: ./
+        with:
+          python-version: ${{ matrix.pypy }}
+          update-environment: false
+
+      - name: PyPy and Python version
+        run: ${{ steps.setup-python.outputs.python-path }} --version
+
+      - name: Run simple code
+        run: ${{ steps.setup-python.outputs.python-path }} -c 'import math; print(math.factorial(5))'
+
+  check-latest:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup PyPy and check latest
+        uses: ./
+        with:
+          python-version: 'pypy-3.7-v7.3.x'
+          check-latest: true
+      - name: PyPy and Python version
+        run: python --version
+
+      - name: Run simple code
+        run: python -c 'import math; print(math.factorial(5))'
+
+      - name: Assert PyPy is running
+        run: |
+          import platform
+          assert platform.python_implementation().lower() == "pypy"
+        shell: python
+
+      - name: Assert expected binaries (or symlinks) are present
+        run: |
+          EXECUTABLE="pypy-3.7-v7.3.x"
+          EXECUTABLE=${EXECUTABLE/-/}  # remove the first '-' in "pypy-X.Y" -> "pypyX.Y" to match executable name
+          EXECUTABLE=${EXECUTABLE%%-*}  # remove any -* suffixe
+          ${EXECUTABLE} --version
+        shell: bash
+
+  setup-pypy-multiple-versions:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup PyPy and check latest
+        uses: ./
+        with:
+          python-version: |
+            pypy-3.7-v7.3.x
+            pypy3.8
+          check-latest: true
+      - name: PyPy and Python version
+        run: python --version
+
+      - name: Run simple code
+        run: python -c 'import math; print(math.factorial(5))'
+
+      - name: Assert PyPy is running
+        run: |
+          import platform
+          assert platform.python_implementation().lower() == "pypy"
+        shell: python
+
+      - name: Assert expected binaries (or symlinks) are present
+        run: |
+          EXECUTABLE="pypy-3.7-v7.3.x"
+          EXECUTABLE=${EXECUTABLE/-/}  # remove the first '-' in "pypy-X.Y" -> "pypyX.Y" to match executable name
+          EXECUTABLE=${EXECUTABLE%%-*}  # remove any -* suffixe
+          ${EXECUTABLE} --version
+        shell: bash
+      - name: Assert expected binaries (or symlinks) are present
+        run: |
+          EXECUTABLE='pypy3.8'
+          EXECUTABLE=${EXECUTABLE/pypy-/pypy}  # remove the first '-' in "pypy-X.Y" -> "pypyX.Y" to match executable name
+          EXECUTABLE=${EXECUTABLE%%-*}  # remove any -* suffixe
+          ${EXECUTABLE} --version
+        shell: bash
 
